<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnu_free"
        android:title="@string/mnu_free" />
    <item
        android:id="@+id/mnu_paid"
        android:title="@string/mnu_paid" />
    <item
        android:id="@+id/mnu_songs"
        android:title="@string/mnu_songs" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mnu_limit_10"
            android:checked="true"
            android:title="@string/mnu_limit_10" />
        <item
            android:id="@+id/mnu_limit_25"
            android:title="@string/mnu_limit_25" />
    </group>
    <item
        android:id="@+id/mnu_refresh"
        android:title="@string/mnu_referesh" />
</menu>